# flack

./: .env.example  .gitignore  CLAUDE.md  README.md  _headers  code-review-report.md  front-end-design-system.md  package-lock.json  package.json  prd.md  svelte.config.js  vitest.config.ts  wrangler.toml
convex/: auth.test.ts  auth.ts  authHelpers.test.ts  authHelpers.ts  authMiddleware.ts  channelInvites.test.ts  channelInvites.ts  channelMembers.test.ts  channelMembers.ts  channels.test.ts  channels.ts  crons.ts  http.ts  messages.test.ts  messages.ts  migrations.ts  notifications.test.ts  notifications.ts  presence.ts  rateLimiter.ts  schema.ts  seed.ts  todos.test.ts  todos.ts  unsubscribe.test.ts  unsubscribe.ts
convex/_generated/: api.d.ts
src/: hooks.server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/components/: ChannelList.svelte  ChatInput.svelte  CodeBlock.svelte  CodeBlock.svelte.test.ts  EmptyState.svelte  ErrorBoundary.svelte  FocusTrap.svelte  HamburgerButton.svelte  InlineCode.svelte  InlineCode.svelte.test.ts  InviteModal.svelte  JumpToNewButton.svelte  KeyboardShortcutsHelp.svelte  LoadingSkeleton.svelte  MentionAutocomplete.svelte  MentionSpan.svelte  MessageItem.svelte  MessageList.svelte  MobileDrawer.svelte  NewChannelModal.svelte  NotificationPrompt.svelte  NotificationSettings.svelte  OfflineIndicator.svelte  OnlineUsers.svelte  SkipLink.svelte  (+12 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
static/: _headers
(+43 files in other folders)
